# dirmon

./: .dirmon.conf  .gitignore  Cargo.toml  README.md
src/: internals.rs  main.rs  plan.md
src/cli/: mod.rs
src/components/: channel.rs  mod.rs  reactor.rs  watcher.rs
src/helpers/: config.rs  extensions.rs  files.rs  mod.rs
src/tui/: mod.rs
test/: file-generator.sh  file-verification.sh  test-conf-00.conf
