[package]
name = "dirmon"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "This utility provides the user to be able to monitor a directory and automatically configure a structure for the file to go into."
readme = "README.md"
repository = "https://github.com/shri-acha/dirmon"
categories = ["command-line-utilities", "filesystem","development-tools::build-utils","config"]
exclude = [".dirmon.conf","test/"]

[dependencies]
anyhow = "1.0.102"
configparser = "3.1.0"
env_logger = "0.11.8"
fs_extra = "1.3.0"
log = "0.4.28"
notify = "8.1.0"
